// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Statistic renders correctly with title 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "start",
      }
    }
  >
    <p
      className="text-m stat-title"
    >
      abc
    </p>
  </div>
  <div
    className="stat-content"
  >
    <Component />
  </div>
</div>
`;

exports[`Statistic renders correctly without title 1`] = `
<div>
  <div
    className="stat-content"
  >
    <Component />
  </div>
</div>
`;
